Fix the missing borders

--- a/src/css/themes/infragistics/infragistics.theme.css
+++ b/src/css/themes/infragistics/infragistics.theme.css
@@ -2275,8 +2275,8 @@ input.ui-igbutton {
 }
 /* BUG 246065 Marin Popov 23.12.2017 Grid's header and body are misaligned when a grid is Multi Row Layout and is continuous virtualization mode.*/
 .ui-iggrid tbody td {
-  border-left: 1px solid transparent;
-  border-right: 1px solid transparent;
+  border-left: 1px solid #dadada;
+  border-right: 1px solid #dadada;
 }
 .ui-iggrid-headertable-mrl.ui-iggrid-headertable-mrl-scrollable {
   border-right: 1px solid #dadada;
